2011-04-19  Stuart Morgan  <stuartmorgan@chromium.org>

Reviewed by Tony Chang.

        [chromium] Clicking on plugin for first time blocks focus shift
        https://bugs.webkit.org/show_bug.cgi?id=58419

        Added new test for cross-iframe focus changes on plugin clicks.

        * plugins/mouse-click-iframe-to-plugin-expected.txt: Added.
        * plugins/mouse-click-iframe-to-plugin.html: Added.
2011-04-19  Stuart Morgan  <stuartmorgan@chromium.org>

        Reviewed by Tony Chang.

        [chromium] Clicking on plugin for first time blocks focus shift
        https://bugs.webkit.org/show_bug.cgi?id=58419

        Switched to using FocusController when moving focus to a plugin
        so that cross-frame focus changes are handled correctly.

        * src/WebPluginContainerImpl.cpp:
        (WebKit::WebPluginContainerImpl::handleMouseEvent):

Canonical link: https://commits.webkit.org/74010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84270 268f45cc-cd09-0410-ab3c-d52691b4dbfc